parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMPAR

Grammar

Rule 0     S' -> program
Rule 1     program -> progbody func
Rule 2     progbody -> <empty>
Rule 3     progbody -> progbody func
Rule 4     func -> DEF ID LBR args RBR LFBR funcbody RFBR
Rule 5     args -> <empty>
Rule 6     args -> ID
Rule 7     args -> args COMMA ID
Rule 8     funcbody -> <empty>
Rule 9     funcbody -> funcbody if
Rule 10    funcbody -> funcbody funcall
Rule 11    funcbody -> funcbody assign
Rule 12    funcbody -> funcbody while
Rule 13    funcbody -> funcbody return
Rule 14    assign -> ID ASSIGN expression SEMICOLON
Rule 15    assign -> ID ASSIGN funcall
Rule 16    funcall -> ID LBR args RBR SEMICOLON
Rule 17    if -> IF LBR expression RBR LFBR funcbody RFBR elsebranch
Rule 18    elsebranch -> <empty>
Rule 19    elsebranch -> ELSE LFBR funcbody RFBR
Rule 20    while -> WHILE LBR expression RBR LFBR funcbody RFBR
Rule 21    return -> RETURN LBR expression RBR SEMICOLON
Rule 22    return -> RETURN LBR ID RBR SEMICOLON
Rule 23    expression -> expression PLUS term
Rule 24    expression -> ID PLUS term
Rule 25    expression -> expression SUB term
Rule 26    expression -> ID SUB term
Rule 27    expression -> expression MOREQ expression
Rule 28    expression -> expression LESEQ expression
Rule 29    expression -> expression LT expression
Rule 30    expression -> expression GT expression
Rule 31    expression -> expression EQ expression
Rule 32    expression -> expression NE expression
Rule 33    expression -> expression DIS term
Rule 34    expression -> term
Rule 35    expression -> ID
Rule 36    term -> term MULT factor
Rule 37    term -> term CON factor
Rule 38    term -> term DIV factor
Rule 39    term -> factor
Rule 40    term -> ID
Rule 41    factor -> DEN expression
Rule 42    factor -> NUM
Rule 43    factor -> factor POW expression
Rule 44    factor -> LBR expression RBR

Terminals, with rules where they appear

ASSIGN               : 14 15
COMMA                : 7
COMPAR               : 
CON                  : 37
DEF                  : 4
DEN                  : 41
DIS                  : 33
DIV                  : 38
ELSE                 : 19
EQ                   : 31
GT                   : 30
ID                   : 4 6 7 14 15 16 22 24 26 35 40
IF                   : 17
LBR                  : 4 16 17 20 21 22 44
LESEQ                : 28
LFBR                 : 4 17 19 20
LT                   : 29
MOREQ                : 27
MULT                 : 36
NE                   : 32
NUM                  : 42
PLUS                 : 23 24
POW                  : 43
RBR                  : 4 16 17 20 21 22 44
RETURN               : 21 22
RFBR                 : 4 17 19 20
SEMICOLON            : 14 16 21 22
SUB                  : 25 26
WHILE                : 20
error                : 

Nonterminals, with rules where they appear

args                 : 4 7 16
assign               : 11
elsebranch           : 17
expression           : 14 17 20 21 23 25 27 27 28 28 29 29 30 30 31 31 32 32 33 41 43 44
factor               : 36 37 38 39 43
func                 : 1 3
funcall              : 10 15
funcbody             : 4 9 10 11 12 13 17 19 20
if                   : 9
progbody             : 1 3
program              : 0
return               : 13
term                 : 23 24 25 26 33 34 36 37 38
while                : 12

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . progbody func
    (2) progbody -> .
    (3) progbody -> . progbody func

    DEF             reduce using rule 2 (progbody -> .)

    program                        shift and go to state 1
    progbody                       shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> progbody . func
    (3) progbody -> progbody . func
    (4) func -> . DEF ID LBR args RBR LFBR funcbody RFBR

    DEF             shift and go to state 4

    func                           shift and go to state 3

state 3

    (1) program -> progbody func .
    (3) progbody -> progbody func .

    $end            reduce using rule 1 (program -> progbody func .)
    DEF             reduce using rule 3 (progbody -> progbody func .)


state 4

    (4) func -> DEF . ID LBR args RBR LFBR funcbody RFBR

    ID              shift and go to state 5


state 5

    (4) func -> DEF ID . LBR args RBR LFBR funcbody RFBR

    LBR             shift and go to state 6


state 6

    (4) func -> DEF ID LBR . args RBR LFBR funcbody RFBR
    (5) args -> .
    (6) args -> . ID
    (7) args -> . args COMMA ID

    RBR             reduce using rule 5 (args -> .)
    COMMA           reduce using rule 5 (args -> .)
    ID              shift and go to state 7

    args                           shift and go to state 8

state 7

    (6) args -> ID .

    RBR             reduce using rule 6 (args -> ID .)
    COMMA           reduce using rule 6 (args -> ID .)


state 8

    (4) func -> DEF ID LBR args . RBR LFBR funcbody RFBR
    (7) args -> args . COMMA ID

    RBR             shift and go to state 9
    COMMA           shift and go to state 10


state 9

    (4) func -> DEF ID LBR args RBR . LFBR funcbody RFBR

    LFBR            shift and go to state 11


state 10

    (7) args -> args COMMA . ID

    ID              shift and go to state 12


state 11

    (4) func -> DEF ID LBR args RBR LFBR . funcbody RFBR
    (8) funcbody -> .
    (9) funcbody -> . funcbody if
    (10) funcbody -> . funcbody funcall
    (11) funcbody -> . funcbody assign
    (12) funcbody -> . funcbody while
    (13) funcbody -> . funcbody return

    RFBR            reduce using rule 8 (funcbody -> .)
    IF              reduce using rule 8 (funcbody -> .)
    ID              reduce using rule 8 (funcbody -> .)
    WHILE           reduce using rule 8 (funcbody -> .)
    RETURN          reduce using rule 8 (funcbody -> .)

    funcbody                       shift and go to state 13

state 12

    (7) args -> args COMMA ID .

    RBR             reduce using rule 7 (args -> args COMMA ID .)
    COMMA           reduce using rule 7 (args -> args COMMA ID .)


state 13

    (4) func -> DEF ID LBR args RBR LFBR funcbody . RFBR
    (9) funcbody -> funcbody . if
    (10) funcbody -> funcbody . funcall
    (11) funcbody -> funcbody . assign
    (12) funcbody -> funcbody . while
    (13) funcbody -> funcbody . return
    (17) if -> . IF LBR expression RBR LFBR funcbody RFBR elsebranch
    (16) funcall -> . ID LBR args RBR SEMICOLON
    (14) assign -> . ID ASSIGN expression SEMICOLON
    (15) assign -> . ID ASSIGN funcall
    (20) while -> . WHILE LBR expression RBR LFBR funcbody RFBR
    (21) return -> . RETURN LBR expression RBR SEMICOLON
    (22) return -> . RETURN LBR ID RBR SEMICOLON

    RFBR            shift and go to state 15
    IF              shift and go to state 21
    ID              shift and go to state 14
    WHILE           shift and go to state 22
    RETURN          shift and go to state 23

    if                             shift and go to state 16
    funcall                        shift and go to state 17
    assign                         shift and go to state 18
    while                          shift and go to state 19
    return                         shift and go to state 20

state 14

    (16) funcall -> ID . LBR args RBR SEMICOLON
    (14) assign -> ID . ASSIGN expression SEMICOLON
    (15) assign -> ID . ASSIGN funcall

    LBR             shift and go to state 24
    ASSIGN          shift and go to state 25


state 15

    (4) func -> DEF ID LBR args RBR LFBR funcbody RFBR .

    $end            reduce using rule 4 (func -> DEF ID LBR args RBR LFBR funcbody RFBR .)
    DEF             reduce using rule 4 (func -> DEF ID LBR args RBR LFBR funcbody RFBR .)


state 16

    (9) funcbody -> funcbody if .

    RFBR            reduce using rule 9 (funcbody -> funcbody if .)
    IF              reduce using rule 9 (funcbody -> funcbody if .)
    ID              reduce using rule 9 (funcbody -> funcbody if .)
    WHILE           reduce using rule 9 (funcbody -> funcbody if .)
    RETURN          reduce using rule 9 (funcbody -> funcbody if .)


state 17

    (10) funcbody -> funcbody funcall .

    RFBR            reduce using rule 10 (funcbody -> funcbody funcall .)
    IF              reduce using rule 10 (funcbody -> funcbody funcall .)
    ID              reduce using rule 10 (funcbody -> funcbody funcall .)
    WHILE           reduce using rule 10 (funcbody -> funcbody funcall .)
    RETURN          reduce using rule 10 (funcbody -> funcbody funcall .)


state 18

    (11) funcbody -> funcbody assign .

    RFBR            reduce using rule 11 (funcbody -> funcbody assign .)
    IF              reduce using rule 11 (funcbody -> funcbody assign .)
    ID              reduce using rule 11 (funcbody -> funcbody assign .)
    WHILE           reduce using rule 11 (funcbody -> funcbody assign .)
    RETURN          reduce using rule 11 (funcbody -> funcbody assign .)


state 19

    (12) funcbody -> funcbody while .

    RFBR            reduce using rule 12 (funcbody -> funcbody while .)
    IF              reduce using rule 12 (funcbody -> funcbody while .)
    ID              reduce using rule 12 (funcbody -> funcbody while .)
    WHILE           reduce using rule 12 (funcbody -> funcbody while .)
    RETURN          reduce using rule 12 (funcbody -> funcbody while .)


state 20

    (13) funcbody -> funcbody return .

    RFBR            reduce using rule 13 (funcbody -> funcbody return .)
    IF              reduce using rule 13 (funcbody -> funcbody return .)
    ID              reduce using rule 13 (funcbody -> funcbody return .)
    WHILE           reduce using rule 13 (funcbody -> funcbody return .)
    RETURN          reduce using rule 13 (funcbody -> funcbody return .)


state 21

    (17) if -> IF . LBR expression RBR LFBR funcbody RFBR elsebranch

    LBR             shift and go to state 26


state 22

    (20) while -> WHILE . LBR expression RBR LFBR funcbody RFBR

    LBR             shift and go to state 27


state 23

    (21) return -> RETURN . LBR expression RBR SEMICOLON
    (22) return -> RETURN . LBR ID RBR SEMICOLON

    LBR             shift and go to state 28


state 24

    (16) funcall -> ID LBR . args RBR SEMICOLON
    (5) args -> .
    (6) args -> . ID
    (7) args -> . args COMMA ID

    RBR             reduce using rule 5 (args -> .)
    COMMA           reduce using rule 5 (args -> .)
    ID              shift and go to state 7

    args                           shift and go to state 29

state 25

    (14) assign -> ID ASSIGN . expression SEMICOLON
    (15) assign -> ID ASSIGN . funcall
    (23) expression -> . expression PLUS term
    (24) expression -> . ID PLUS term
    (25) expression -> . expression SUB term
    (26) expression -> . ID SUB term
    (27) expression -> . expression MOREQ expression
    (28) expression -> . expression LESEQ expression
    (29) expression -> . expression LT expression
    (30) expression -> . expression GT expression
    (31) expression -> . expression EQ expression
    (32) expression -> . expression NE expression
    (33) expression -> . expression DIS term
    (34) expression -> . term
    (35) expression -> . ID
    (16) funcall -> . ID LBR args RBR SEMICOLON
    (36) term -> . term MULT factor
    (37) term -> . term CON factor
    (38) term -> . term DIV factor
    (39) term -> . factor
    (40) term -> . ID
    (41) factor -> . DEN expression
    (42) factor -> . NUM
    (43) factor -> . factor POW expression
    (44) factor -> . LBR expression RBR

    ID              shift and go to state 30
    DEN             shift and go to state 36
    NUM             shift and go to state 37
    LBR             shift and go to state 34

    expression                     shift and go to state 31
    funcall                        shift and go to state 32
    term                           shift and go to state 33
    factor                         shift and go to state 35

state 26

    (17) if -> IF LBR . expression RBR LFBR funcbody RFBR elsebranch
    (23) expression -> . expression PLUS term
    (24) expression -> . ID PLUS term
    (25) expression -> . expression SUB term
    (26) expression -> . ID SUB term
    (27) expression -> . expression MOREQ expression
    (28) expression -> . expression LESEQ expression
    (29) expression -> . expression LT expression
    (30) expression -> . expression GT expression
    (31) expression -> . expression EQ expression
    (32) expression -> . expression NE expression
    (33) expression -> . expression DIS term
    (34) expression -> . term
    (35) expression -> . ID
    (36) term -> . term MULT factor
    (37) term -> . term CON factor
    (38) term -> . term DIV factor
    (39) term -> . factor
    (40) term -> . ID
    (41) factor -> . DEN expression
    (42) factor -> . NUM
    (43) factor -> . factor POW expression
    (44) factor -> . LBR expression RBR

    ID              shift and go to state 39
    DEN             shift and go to state 36
    NUM             shift and go to state 37
    LBR             shift and go to state 34

    expression                     shift and go to state 38
    term                           shift and go to state 33
    factor                         shift and go to state 35

state 27

    (20) while -> WHILE LBR . expression RBR LFBR funcbody RFBR
    (23) expression -> . expression PLUS term
    (24) expression -> . ID PLUS term
    (25) expression -> . expression SUB term
    (26) expression -> . ID SUB term
    (27) expression -> . expression MOREQ expression
    (28) expression -> . expression LESEQ expression
    (29) expression -> . expression LT expression
    (30) expression -> . expression GT expression
    (31) expression -> . expression EQ expression
    (32) expression -> . expression NE expression
    (33) expression -> . expression DIS term
    (34) expression -> . term
    (35) expression -> . ID
    (36) term -> . term MULT factor
    (37) term -> . term CON factor
    (38) term -> . term DIV factor
    (39) term -> . factor
    (40) term -> . ID
    (41) factor -> . DEN expression
    (42) factor -> . NUM
    (43) factor -> . factor POW expression
    (44) factor -> . LBR expression RBR

    ID              shift and go to state 39
    DEN             shift and go to state 36
    NUM             shift and go to state 37
    LBR             shift and go to state 34

    expression                     shift and go to state 40
    term                           shift and go to state 33
    factor                         shift and go to state 35

state 28

    (21) return -> RETURN LBR . expression RBR SEMICOLON
    (22) return -> RETURN LBR . ID RBR SEMICOLON
    (23) expression -> . expression PLUS term
    (24) expression -> . ID PLUS term
    (25) expression -> . expression SUB term
    (26) expression -> . ID SUB term
    (27) expression -> . expression MOREQ expression
    (28) expression -> . expression LESEQ expression
    (29) expression -> . expression LT expression
    (30) expression -> . expression GT expression
    (31) expression -> . expression EQ expression
    (32) expression -> . expression NE expression
    (33) expression -> . expression DIS term
    (34) expression -> . term
    (35) expression -> . ID
    (36) term -> . term MULT factor
    (37) term -> . term CON factor
    (38) term -> . term DIV factor
    (39) term -> . factor
    (40) term -> . ID
    (41) factor -> . DEN expression
    (42) factor -> . NUM
    (43) factor -> . factor POW expression
    (44) factor -> . LBR expression RBR

    ID              shift and go to state 42
    DEN             shift and go to state 36
    NUM             shift and go to state 37
    LBR             shift and go to state 34

    expression                     shift and go to state 41
    term                           shift and go to state 33
    factor                         shift and go to state 35

state 29

    (16) funcall -> ID LBR args . RBR SEMICOLON
    (7) args -> args . COMMA ID

    RBR             shift and go to state 43
    COMMA           shift and go to state 10


state 30

    (24) expression -> ID . PLUS term
    (26) expression -> ID . SUB term
    (35) expression -> ID .
    (16) funcall -> ID . LBR args RBR SEMICOLON
    (40) term -> ID .

  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for SUB resolved as shift
  ! reduce/reduce conflict for SEMICOLON resolved using rule 35 (expression -> ID .)
  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for SUB resolved as shift
  ! reduce/reduce conflict for MOREQ resolved using rule 35 (expression -> ID .)
  ! reduce/reduce conflict for LESEQ resolved using rule 35 (expression -> ID .)
  ! reduce/reduce conflict for LT resolved using rule 35 (expression -> ID .)
  ! reduce/reduce conflict for GT resolved using rule 35 (expression -> ID .)
  ! reduce/reduce conflict for EQ resolved using rule 35 (expression -> ID .)
  ! reduce/reduce conflict for NE resolved using rule 35 (expression -> ID .)
  ! reduce/reduce conflict for DIS resolved using rule 35 (expression -> ID .)
    PLUS            shift and go to state 44
    SUB             shift and go to state 45
    SEMICOLON       reduce using rule 35 (expression -> ID .)
    MOREQ           reduce using rule 35 (expression -> ID .)
    LESEQ           reduce using rule 35 (expression -> ID .)
    LT              reduce using rule 35 (expression -> ID .)
    GT              reduce using rule 35 (expression -> ID .)
    EQ              reduce using rule 35 (expression -> ID .)
    NE              reduce using rule 35 (expression -> ID .)
    DIS             reduce using rule 35 (expression -> ID .)
    LBR             shift and go to state 24
    MULT            reduce using rule 40 (term -> ID .)
    CON             reduce using rule 40 (term -> ID .)
    DIV             reduce using rule 40 (term -> ID .)

  ! PLUS            [ reduce using rule 35 (expression -> ID .) ]
  ! SUB             [ reduce using rule 35 (expression -> ID .) ]
  ! SEMICOLON       [ reduce using rule 40 (term -> ID .) ]
  ! PLUS            [ reduce using rule 40 (term -> ID .) ]
  ! SUB             [ reduce using rule 40 (term -> ID .) ]
  ! MOREQ           [ reduce using rule 40 (term -> ID .) ]
  ! LESEQ           [ reduce using rule 40 (term -> ID .) ]
  ! LT              [ reduce using rule 40 (term -> ID .) ]
  ! GT              [ reduce using rule 40 (term -> ID .) ]
  ! EQ              [ reduce using rule 40 (term -> ID .) ]
  ! NE              [ reduce using rule 40 (term -> ID .) ]
  ! DIS             [ reduce using rule 40 (term -> ID .) ]


state 31

    (14) assign -> ID ASSIGN expression . SEMICOLON
    (23) expression -> expression . PLUS term
    (25) expression -> expression . SUB term
    (27) expression -> expression . MOREQ expression
    (28) expression -> expression . LESEQ expression
    (29) expression -> expression . LT expression
    (30) expression -> expression . GT expression
    (31) expression -> expression . EQ expression
    (32) expression -> expression . NE expression
    (33) expression -> expression . DIS term

    SEMICOLON       shift and go to state 46
    PLUS            shift and go to state 47
    SUB             shift and go to state 48
    MOREQ           shift and go to state 49
    LESEQ           shift and go to state 50
    LT              shift and go to state 51
    GT              shift and go to state 52
    EQ              shift and go to state 53
    NE              shift and go to state 54
    DIS             shift and go to state 55


state 32

    (15) assign -> ID ASSIGN funcall .

    RFBR            reduce using rule 15 (assign -> ID ASSIGN funcall .)
    IF              reduce using rule 15 (assign -> ID ASSIGN funcall .)
    ID              reduce using rule 15 (assign -> ID ASSIGN funcall .)
    WHILE           reduce using rule 15 (assign -> ID ASSIGN funcall .)
    RETURN          reduce using rule 15 (assign -> ID ASSIGN funcall .)


state 33

    (34) expression -> term .
    (36) term -> term . MULT factor
    (37) term -> term . CON factor
    (38) term -> term . DIV factor

  ! shift/reduce conflict for MULT resolved as shift
  ! shift/reduce conflict for CON resolved as shift
  ! shift/reduce conflict for DIV resolved as shift
    SEMICOLON       reduce using rule 34 (expression -> term .)
    PLUS            reduce using rule 34 (expression -> term .)
    SUB             reduce using rule 34 (expression -> term .)
    MOREQ           reduce using rule 34 (expression -> term .)
    LESEQ           reduce using rule 34 (expression -> term .)
    LT              reduce using rule 34 (expression -> term .)
    GT              reduce using rule 34 (expression -> term .)
    EQ              reduce using rule 34 (expression -> term .)
    NE              reduce using rule 34 (expression -> term .)
    DIS             reduce using rule 34 (expression -> term .)
    RBR             reduce using rule 34 (expression -> term .)
    POW             reduce using rule 34 (expression -> term .)
    MULT            shift and go to state 56
    CON             shift and go to state 57
    DIV             shift and go to state 58

  ! MULT            [ reduce using rule 34 (expression -> term .) ]
  ! CON             [ reduce using rule 34 (expression -> term .) ]
  ! DIV             [ reduce using rule 34 (expression -> term .) ]


state 34

    (44) factor -> LBR . expression RBR
    (23) expression -> . expression PLUS term
    (24) expression -> . ID PLUS term
    (25) expression -> . expression SUB term
    (26) expression -> . ID SUB term
    (27) expression -> . expression MOREQ expression
    (28) expression -> . expression LESEQ expression
    (29) expression -> . expression LT expression
    (30) expression -> . expression GT expression
    (31) expression -> . expression EQ expression
    (32) expression -> . expression NE expression
    (33) expression -> . expression DIS term
    (34) expression -> . term
    (35) expression -> . ID
    (36) term -> . term MULT factor
    (37) term -> . term CON factor
    (38) term -> . term DIV factor
    (39) term -> . factor
    (40) term -> . ID
    (41) factor -> . DEN expression
    (42) factor -> . NUM
    (43) factor -> . factor POW expression
    (44) factor -> . LBR expression RBR

    ID              shift and go to state 39
    DEN             shift and go to state 36
    NUM             shift and go to state 37
    LBR             shift and go to state 34

    expression                     shift and go to state 59
    term                           shift and go to state 33
    factor                         shift and go to state 35

state 35

    (39) term -> factor .
    (43) factor -> factor . POW expression

  ! shift/reduce conflict for POW resolved as shift
    MULT            reduce using rule 39 (term -> factor .)
    CON             reduce using rule 39 (term -> factor .)
    DIV             reduce using rule 39 (term -> factor .)
    SEMICOLON       reduce using rule 39 (term -> factor .)
    PLUS            reduce using rule 39 (term -> factor .)
    SUB             reduce using rule 39 (term -> factor .)
    MOREQ           reduce using rule 39 (term -> factor .)
    LESEQ           reduce using rule 39 (term -> factor .)
    LT              reduce using rule 39 (term -> factor .)
    GT              reduce using rule 39 (term -> factor .)
    EQ              reduce using rule 39 (term -> factor .)
    NE              reduce using rule 39 (term -> factor .)
    DIS             reduce using rule 39 (term -> factor .)
    RBR             reduce using rule 39 (term -> factor .)
    POW             shift and go to state 60

  ! POW             [ reduce using rule 39 (term -> factor .) ]


state 36

    (41) factor -> DEN . expression
    (23) expression -> . expression PLUS term
    (24) expression -> . ID PLUS term
    (25) expression -> . expression SUB term
    (26) expression -> . ID SUB term
    (27) expression -> . expression MOREQ expression
    (28) expression -> . expression LESEQ expression
    (29) expression -> . expression LT expression
    (30) expression -> . expression GT expression
    (31) expression -> . expression EQ expression
    (32) expression -> . expression NE expression
    (33) expression -> . expression DIS term
    (34) expression -> . term
    (35) expression -> . ID
    (36) term -> . term MULT factor
    (37) term -> . term CON factor
    (38) term -> . term DIV factor
    (39) term -> . factor
    (40) term -> . ID
    (41) factor -> . DEN expression
    (42) factor -> . NUM
    (43) factor -> . factor POW expression
    (44) factor -> . LBR expression RBR

    ID              shift and go to state 39
    DEN             shift and go to state 36
    NUM             shift and go to state 37
    LBR             shift and go to state 34

    expression                     shift and go to state 61
    term                           shift and go to state 33
    factor                         shift and go to state 35

state 37

    (42) factor -> NUM .

    POW             reduce using rule 42 (factor -> NUM .)
    MULT            reduce using rule 42 (factor -> NUM .)
    CON             reduce using rule 42 (factor -> NUM .)
    DIV             reduce using rule 42 (factor -> NUM .)
    SEMICOLON       reduce using rule 42 (factor -> NUM .)
    PLUS            reduce using rule 42 (factor -> NUM .)
    SUB             reduce using rule 42 (factor -> NUM .)
    MOREQ           reduce using rule 42 (factor -> NUM .)
    LESEQ           reduce using rule 42 (factor -> NUM .)
    LT              reduce using rule 42 (factor -> NUM .)
    GT              reduce using rule 42 (factor -> NUM .)
    EQ              reduce using rule 42 (factor -> NUM .)
    NE              reduce using rule 42 (factor -> NUM .)
    DIS             reduce using rule 42 (factor -> NUM .)
    RBR             reduce using rule 42 (factor -> NUM .)


state 38

    (17) if -> IF LBR expression . RBR LFBR funcbody RFBR elsebranch
    (23) expression -> expression . PLUS term
    (25) expression -> expression . SUB term
    (27) expression -> expression . MOREQ expression
    (28) expression -> expression . LESEQ expression
    (29) expression -> expression . LT expression
    (30) expression -> expression . GT expression
    (31) expression -> expression . EQ expression
    (32) expression -> expression . NE expression
    (33) expression -> expression . DIS term

    RBR             shift and go to state 62
    PLUS            shift and go to state 47
    SUB             shift and go to state 48
    MOREQ           shift and go to state 49
    LESEQ           shift and go to state 50
    LT              shift and go to state 51
    GT              shift and go to state 52
    EQ              shift and go to state 53
    NE              shift and go to state 54
    DIS             shift and go to state 55


state 39

    (24) expression -> ID . PLUS term
    (26) expression -> ID . SUB term
    (35) expression -> ID .
    (40) term -> ID .
